--- a/13 - Pivots and Joins/pivots_joins.ipynb
+++ b/13 - Pivots and Joins/pivots_joins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -30,17 +30,38 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>Second Year</td> <td>7           </td> <td>5                </td> <td>7             </td> <td>Right-handed</td> <td>On your back      </td> <td>a little brother</td> <td>Black Mirror</td> <td>3        </td>\n",
+       "            <td>Second Year</td> <td>7           </td> <td>5                </td> <td>7             </td> <td>Right-handed</td> <td>On your back      </td> <td>a little brother</td> <td>Black Mirror                      </td> <td>3        </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>Second Year</td> <td>3           </td> <td>6                </td> <td>7             </td> <td>Right-handed</td> <td>On your right side</td> <td>Bird            </td> <td>nan         </td> <td>0        </td>\n",
+       "            <td>Second Year</td> <td>3           </td> <td>6                </td> <td>7             </td> <td>Right-handed</td> <td>On your right side</td> <td>Bird            </td> <td>nan                               </td> <td>0        </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>Second Year</td> <td>3           </td> <td>8                </td> <td>6             </td> <td>Right-handed</td> <td>On your right side</td> <td>Bird            </td> <td>The Bear    </td> <td>0        </td>\n",
+       "            <td>Second Year</td> <td>3           </td> <td>8                </td> <td>6             </td> <td>Right-handed</td> <td>On your right side</td> <td>Bird            </td> <td>The Bear                          </td> <td>0        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>First Year </td> <td>4           </td> <td>4                </td> <td>7             </td> <td>Right-handed</td> <td>On your left side </td> <td>Bird            </td> <td>Gilmore Girls                     </td> <td>1        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Second Year</td> <td>3           </td> <td>3                </td> <td>7             </td> <td>Right-handed</td> <td>On your stomach   </td> <td>Bird            </td> <td>nan                               </td> <td>2        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Second Year</td> <td>4           </td> <td>4                </td> <td>7             </td> <td>Right-handed</td> <td>On your right side</td> <td>Bird            </td> <td>The Bear                          </td> <td>2        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Second Year</td> <td>7           </td> <td>5                </td> <td>7             </td> <td>Right-handed</td> <td>On your right side</td> <td>Cat             </td> <td>Ahsoka                            </td> <td>0        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Third Year </td> <td>4           </td> <td>6                </td> <td>6             </td> <td>Right-handed</td> <td>On your right side</td> <td>Cat             </td> <td>Ahsoka, The Mandalorian, One Piece</td> <td>0        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Third Year </td> <td>4           </td> <td>3                </td> <td>6             </td> <td>Right-handed</td> <td>On your back      </td> <td>Cat             </td> <td>Attack on Titan                   </td> <td>0        </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Second Year</td> <td>5           </td> <td>4                </td> <td>7.5           </td> <td>Right-handed</td> <td>On your stomach   </td> <td>Cat             </td> <td>Better Call Saul                  </td> <td>0        </td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>\n",
-       "<p>... (929 rows omitted)</p>"
+       "<p>... (922 rows omitted)</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -52,7 +73,7 @@
    ],
    "source": [
     "survey = Table.read_table('welcome_survey_sp24.csv')\n",
-    "survey.show(3)"
+    "survey.show(10)"
    ]
   },
   {
@@ -64,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +121,7 @@
        "On your stomach    | 1             | 1            | 0              | 0                                                       | 8           | 115          | 0            | 0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,13 +172,13 @@
        "On your stomach    | 9             | 7            | 0              | 0                                                       | 2           | 0            | 0            | 0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Similar to the group command, you can specify something to record in the cell other than the count\n",
+    "# Similar to the group command, you can specify a characteristic to record in the cell other than the count\n",
     "# This example records the minimum value of \"Number of textees\" for each of the pivot categories\n",
     "survey.pivot(\"Handedness\", \"Sleep position\", \"Number of textees\", min)"
    ]
@@ -171,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,10 +246,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>city</th> <th>concrete</th> <th>mixed/composite</th> <th>steel</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Atlanta   </td> <td>27      </td> <td>4              </td> <td>7    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Austin    </td> <td>16      </td> <td>0              </td> <td>1    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Baltimore </td> <td>8       </td> <td>0              </td> <td>6    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Boston    </td> <td>4       </td> <td>2              </td> <td>26   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Charlotte </td> <td>5       </td> <td>3              </td> <td>4    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Chicago   </td> <td>244     </td> <td>35             </td> <td>79   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cincinnati</td> <td>5       </td> <td>1              </td> <td>7    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cleveland </td> <td>2       </td> <td>3              </td> <td>11   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Columbus  </td> <td>4       </td> <td>0              </td> <td>9    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dallas    </td> <td>7       </td> <td>2              </td> <td>11   </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (25 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "city       | concrete | mixed/composite | steel\n",
+       "Atlanta    | 27       | 4               | 7\n",
+       "Austin     | 16       | 0               | 1\n",
+       "Baltimore  | 8        | 0               | 6\n",
+       "Boston     | 4        | 2               | 26\n",
+       "Charlotte  | 5        | 3               | 4\n",
+       "Chicago    | 244      | 35              | 79\n",
+       "Cincinnati | 5        | 1               | 7\n",
+       "Cleveland  | 2        | 3               | 11\n",
+       "Columbus   | 4        | 0               | 9\n",
+       "Dallas     | 7        | 2               | 11\n",
+       "... (25 rows omitted)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sky.pivot('material', 'city')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>city</th> <th>concrete</th> <th>mixed/composite</th> <th>steel</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Atlanta   </td> <td>264.25  </td> <td>311.8          </td> <td>169.47</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Austin    </td> <td>208.15  </td> <td>0              </td> <td>93.6  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Baltimore </td> <td>161.24  </td> <td>0              </td> <td>155.15</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Boston    </td> <td>121.92  </td> <td>139            </td> <td>240.79</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Charlotte </td> <td>265.48  </td> <td>239.7          </td> <td>179.23</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Chicago   </td> <td>423.22  </td> <td>306.94         </td> <td>442.14</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cincinnati</td> <td>125     </td> <td>202.69         </td> <td>175   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Cleveland </td> <td>125     </td> <td>288.65         </td> <td>215.8 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Columbus  </td> <td>79.25   </td> <td>0              </td> <td>169.3 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dallas    </td> <td>176.48  </td> <td>280.72         </td> <td>270.06</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (25 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "city       | concrete | mixed/composite | steel\n",
+       "Atlanta    | 264.25   | 311.8           | 169.47\n",
+       "Austin     | 208.15   | 0               | 93.6\n",
+       "Baltimore  | 161.24   | 0               | 155.15\n",
+       "Boston     | 121.92   | 139             | 240.79\n",
+       "Charlotte  | 265.48   | 239.7           | 179.23\n",
+       "Chicago    | 423.22   | 306.94          | 442.14\n",
+       "Cincinnati | 125      | 202.69          | 175\n",
+       "Cleveland  | 125      | 288.65          | 215.8\n",
+       "Columbus   | 79.25    | 0               | 169.3\n",
+       "Dallas     | 176.48   | 280.72          | 270.06\n",
+       "... (25 rows omitted)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sky.pivot('material', 'city', 'height', max)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +435,7 @@
        "Espresso | FSM    | 2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +473,7 @@
        "            <td>25          </td> <td>Strada  </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>5           </td> <td>Asha    </td>\n",
+       "            <td>5           </td> <td>FSM     </td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
@@ -322,7 +482,7 @@
        "Coupon % off | Location\n",
        "10           | Asha\n",
        "25           | Strada\n",
-       "5            | Asha"
+       "5            | FSM"
       ]
      },
      "execution_count": 18,
@@ -333,14 +493,14 @@
    "source": [
     "discounts = Table().with_columns(\n",
     "    'Coupon % off', make_array(10, 25, 5),\n",
-    "    'Location', make_array('Asha', 'Strada', 'Asha')\n",
+    "    'Location', make_array('Asha', 'Strada', 'FSM')\n",
     ")\n",
     "discounts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +517,7 @@
        "            <td>Asha  </td> <td>Milk Tea</td> <td>5.5  </td> <td>10          </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>Asha  </td> <td>Milk Tea</td> <td>5.5  </td> <td>5           </td>\n",
+       "            <td>FSM   </td> <td>Espresso</td> <td>2    </td> <td>5           </td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>Strada</td> <td>Espresso</td> <td>1.75 </td> <td>25          </td>\n",
@@ -371,12 +531,12 @@
       "text/plain": [
        "Cafe   | Drink    | Price | Coupon % off\n",
        "Asha   | Milk Tea | 5.5   | 10\n",
-       "Asha   | Milk Tea | 5.5   | 5\n",
+       "FSM    | Espresso | 2     | 5\n",
        "Strada | Espresso | 1.75  | 25\n",
        "Strada | Latte    | 3.25  | 25"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +603,7 @@
        "bubblegum  | pink        | 4.75"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +647,7 @@
        "bubblegum  | sprinkles"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,10 +664,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th> <th>Topping</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td> <td>sprinkles  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td> <td>caramel    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td> <td>caramel    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td> <td>caramel    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td> <td>marshmallow</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td> <td>marshmallow</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color       | Price | Topping\n",
+       "bubblegum  | pink        | 4.75  | sprinkles\n",
+       "chocolate  | light brown | 4.75  | caramel\n",
+       "chocolate  | dark brown  | 5.25  | caramel\n",
+       "chocolate  | dark brown  | 5.25  | caramel\n",
+       "strawberry | pink        | 3.55  | marshmallow\n",
+       "strawberry | pink        | 5.25  | marshmallow"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ice_cream_combined = cones.join('Flavor', toppings, 'Ice Cream')\n",
+    "ice_cream_combined"
+   ]
   }
  ],
  "metadata": {
