--- a/Homework 4 - Functions, Tables, and Groups/hw04.ipynb
+++ b/Homework 4 - Functions, Tables, and Groups/hw04.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8109eebe",
    "metadata": {},
    "outputs": [],
@@ -93,13 +93,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ebc4af58",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Name</th> <th>Yelp</th> <th>Google</th> <th>Overall</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Albertacos                </td> <td>3.5 </td> <td>3.9   </td> <td>3.45   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Burrito Factory           </td> <td>4.5 </td> <td>4.8   </td> <td>3.5    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Burros and Fries          </td> <td>3.5 </td> <td>4.1   </td> <td>3.575  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Caliente Mexican Food     </td> <td>3.5 </td> <td>4.4   </td> <td>3.25   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>California Burrito Company</td> <td>3.5 </td> <td>4.4   </td> <td>3.2    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (77 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Name</th> <th>Menu_Item</th> <th>Cost</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Albertacos                                         </td> <td>California          </td> <td>5.7 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Albertacos                                         </td> <td>Carne Asada         </td> <td>5.25</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Alberto's 623 N Escondido Blvd, Escondido, CA 92025</td> <td>Carne Asada         </td> <td>4.59</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Burrito Box                                        </td> <td>Steak With Guacamole</td> <td>11.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Burrito Factory                                    </td> <td>Steak Everything    </td> <td>7.35</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (244 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Just run this cell\n",
     "ratings = Table.read_table(\"ratings.csv\")\n",
@@ -123,13 +196,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "baf97c72",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ellipsis' object has no attribute 'show'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m burritos = ...\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mburritos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshow\u001b[49m(\u001b[32m10\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'ellipsis' object has no attribute 'show'"
+     ]
+    }
+   ],
    "source": [
     "burritos = ...\n",
     "burritos.show(10)"
@@ -300,7 +385,7 @@
    "source": [
     "<!-- BEGIN QUESTION -->\n",
     "\n",
-    "**Question 6.** Edwin thinks that burritos in San Diego are cheaper (and taste better) than the burritos in Berkeley. Plot a histogram that visualizes that distribution of the costs of the burritos from San Diego in the `burritos` table. Also use the provided `cost_bins` variable when making your histogram, so that the histogram is more visually informative.\n"
+    "**Question 6.** Plot a histogram that visualizes that distribution of the costs of the burritos from San Diego in the `burritos` table. Also use the provided `cost_bins` variable when making your histogram, so that the histogram is more visually informative.\n"
    ]
   },
   {
@@ -609,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   },
   "otter": {
    "OK_FORMAT": true,
