--- a/14 - Conditionals and Iteration/if-for.ipynb
+++ b/14 - Conditionals and Iteration/if-for.ipynb
@@ -13,7 +13,7 @@
     "import matplotlib.pyplot as plots\n",
     "plots.style.use('fivethirtyeight')\n",
     "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=np.VisibleDeprecationWarning)"
+    "#warnings.simplefilter(action='ignore', category=np.VisibleDeprecationWarning)"
    ]
   },
   {
@@ -72,6 +72,15 @@
    "source": [
     "d6 = np.arange(1, 7)\n",
     "np.random.choice(d6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d6"
    ]
   },
   {
@@ -190,7 +199,7 @@
    "outputs": [],
    "source": [
     "# the \"not\" of a statement is the opposite truth value of the statement on its own\n",
-    "not(one > two)"
+    "not(one >= two)"
    ]
   },
   {
@@ -321,8 +330,8 @@
     "\n",
     "Write a function called \"simulate_one_round\". It takes no inputs. \\\n",
     "Simulate a d6 roll for yourself and another for your opponent. \\\n",
-    "If your roll is larger, return 1.\n",
-    "If your roll is smaller, return -1.\n",
+    "If your roll is larger, return 1.\\\n",
+    "If your roll is smaller, return -1.\\\n",
     "Otherwise, return 0."
    ]
   },
@@ -331,7 +340,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def simulate_one_round():\n",
+    "    d6 = np.arange(1,7)\n",
+    "    player1_roll = np.random.choice(d6)\n",
+    "    player2_roll = np.random.choice(d6)\n",
+    "    if player1_roll > player2_roll:\n",
+    "        return 1\n",
+    "    elif player2_roll > player1_roll:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulate_one_round()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,8 +379,10 @@
     "# The code in the loop is executed one time per value.\n",
     "pets = make_array('cat', 'dog', 'rabbit')\n",
     "\n",
-    "for pet in pets:\n",
-    "    print('I love my ' + pet)"
+    "for x in pets:\n",
+    "    print('I love my ' + x)\n",
+    "    print(x + 's are great')\n",
+    "print('pets are fun')"
    ]
   },
   {
@@ -376,7 +407,8 @@
     "sum = 0 # initialize the variable or Python will complain\n",
     "for i in np.arange(1,5):\n",
     "    sum = sum + i\n",
-    "    print(sum)"
+    "    print(sum)\n",
+    "print('summation finished')"
    ]
   },
   {
@@ -385,9 +417,10 @@
    "source": [
     "# Practice\n",
     "\n",
-    "Write a function called one_hundred_simulations. It takes no inputs.\\\n",
-    "Use a for loop to call the function simulate_one_round one hundred times. \\\n",
-    "Sum up your total winnings by adding all the outputs togther.\n"
+    "Write a function called ten_thousand_simulations. It takes no inputs.\\\n",
+    "Use a for loop to call the function simulate_one_round ten thousand times. \\\n",
+    "Sum up your total winnings by adding all the outputs togther.\\\n",
+    "Return the sum.\n"
    ]
   },
   {
@@ -395,7 +428,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ten_thousand_simulations():\n",
+    "    winnings = 0\n",
+    "    \n",
+    "    for i in np.arange(10000):\n",
+    "        result = simulate_one_round()\n",
+    "        winnings = winnings + result\n",
+    "\n",
+    "    return winnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ten_thousand_simulations()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -415,6 +466,7 @@
     "nums = make_array()\n",
     "for i in np.arange(1, 5):\n",
     "    nums = np.append(nums, i)\n",
+    "    print(nums)\n",
     "\n",
     "nums"
    ]
@@ -425,7 +477,7 @@
    "source": [
     "# Practice\n",
     "\n",
-    "Modify one_hundred_simulations so that it returns an array containing all one hundred outcomes."
+    "Modify ten_thousand_simulations so that it returns an array containing all ten thousand outcomes."
    ]
   },
   {
@@ -433,7 +485,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ten_thousand_simulations():\n",
+    "    outcomes = make_array()\n",
+    "    \n",
+    "    for i in np.arange(10000):\n",
+    "        result = simulate_one_round()\n",
+    "        outcomes = np.append(outcomes, result)\n",
+    "\n",
+    "    return outcomes"
+   ]
   },
   {
    "cell_type": "code",
@@ -441,7 +502,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outcomes = one_hundred_simulations()\n",
+    "ten_thousand_simulations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outcomes = ten_thousand_simulations()\n",
     "results_table = Table().with_column('My winnings', outcomes)\n",
     "results_table.show(10)"
    ]
@@ -464,6 +534,13 @@
    "source": [
     "results_table_grouped.barh('My winnings')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
