don't use np.abs

--- a/18 - Testing Hypotheses, p-value/coinflip2.ipynb
+++ b/18 - Testing Hypotheses, p-value/coinflip2.ipynb
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "0e8fbe93",
    "metadata": {},
    "outputs": [],
    "source": [
     "def coin_dist_from_expectation(num_flips):\n",
-    "    return np.abs(num_flips - 50)"
+    "    return abs(num_flips - 50)"
    ]
   },
   {
