--- a/19 - AB Testing/ab testing.ipynb
+++ b/19 - AB Testing/ab testing.ipynb
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1: Simulate Test Statistic\n",
+    "# Step 1: Function for Test Statistic\n",
     "\n",
     "Write a function called difference_of_means. It takes a table and the name of the column containing the category labels as inputs. It returns the the average \"smoking\" birth weight minus the average \"nonsmoking\" birth weight.\n"
    ]
