--- a/Lab 7 - AB Test/lab07.ipynb
+++ b/Lab 7 - AB Test/lab07.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +87,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>star baker awards</th> <th>won</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3                </td> <td>1   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0                </td> <td>0   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1                </td> <td>0   </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (119 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "bakers = Table.read_table(\"star_bakers.csv\")\n",
     "bakers.show(3)"
@@ -228,6 +259,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "c6180d70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>won</th> <th>star baker awards mean</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0   </td> <td>0.651786              </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1   </td> <td>1.5                   </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8482142857142857"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped = bakers.group('won', np.mean)\n",
+    "means = grouped.column(1)\n",
+    "difference = means.item(1) - means.item(0)\n",
+    "grouped.show()\n",
+    "difference"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true,
@@ -236,7 +318,7 @@
    "outputs": [],
    "source": [
     "def find_test_stat(tbl, label_col, val_col):\n",
-    "    ...\n",
+    "    \n",
     "\n",
     "find_test_stat(bakers, \"won\", \"star baker awards\")"
    ]
