--- a/Lab 7 - AB Test/lab07.ipynb
+++ b/Lab 7 - AB Test/lab07.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,40 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>star baker awards</th> <th>won</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>3                </td> <td>1   </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>0                </td> <td>0   </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>1                </td> <td>0   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>\n",
-       "<p>... (119 rows omitted)</p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bakers = Table.read_table(\"star_bakers.csv\")\n",
     "bakers.show(3)"
@@ -196,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -252,60 +221,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**I have already completed this question for you because lots of people ran into an issue. You must attach the string ' mean' to val_col to get the appropriate column name.**\n",
+    "\n",
     "**Question 2.7.** Given a table like `bakers`, a label column `label_col`, and a values column `val_col`, write a function that calculates the appropriate test statistic.\n",
     "\n",
     "*Hint:* Make sure that you are taking the directionality of our alternative hypothesis into account.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "c6180d70",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>won</th> <th>star baker awards mean</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>0   </td> <td>0.651786              </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>1   </td> <td>1.5                   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8482142857142857"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped = bakers.group('won', np.mean)\n",
-    "means = grouped.column(1)\n",
-    "difference = means.item(1) - means.item(0)\n",
-    "grouped.show()\n",
-    "difference"
    ]
   },
   {
@@ -318,7 +238,10 @@
    "outputs": [],
    "source": [
     "def find_test_stat(tbl, label_col, val_col):\n",
-    "    \n",
+    "    grouped = tbl.group(label_col, np.mean)\n",
+    "    means = grouped.column(val_col + ' mean')\n",
+    "    difference = means.item(1) - means.item(0)\n",
+    "    return difference\n",
     "\n",
     "find_test_stat(bakers, \"won\", \"star baker awards\")"
    ]
